# sgx_aio

./: .gitignore  Cargo.toml  README.md  build.rs
ocalls/: Cargo.toml  sgx_aio_ocalls.edl
ocalls/src/: lib.rs
src/: lib.rs
src/sys/: mod.rs
