[package]
name = "sgx_aio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
sgx_types = { path = "../../deps/rust-sgx-sdk/sgx_types", optional = true }
sgx_tstd = { path = "../../deps/rust-sgx-sdk/sgx_tstd", features = ["backtrace"], optional = true }
sgx_trts = { path = "../../deps/rust-sgx-sdk/sgx_trts", optional = true }
sgx_libc = { path = "../../deps/rust-sgx-sdk/sgx_libc", optional = true }


[build-dependencies]
bindgen = { version = "0.58", optional = true }

[features]
overwrite = [ "bindgen" ]
sgx = [ "sgx_types", "sgx_tstd", "sgx_trts", "sgx_libc" ]

